style.css
/*
Theme Name: Syrup
Theme URI: http://endflow.net/syrup
Description: A reference theme for Syrup plugin.
Author: Yuki Kodama
Author URI: http://endflow.net/
Version: 1.0.0
License: MIT
*/

h1.site-title {
    margin: 8px 0 12px;
}

h1.site-title a span {
    font: 0/0 a;
    background: white url(images/logo.png) no-repeat top center;
    background-size: 112px 48px;
    height: 48px;
    width: 100%;
    display: block;
}

h2.entry-title, h2.page-title {
    font-size: 1.2em;
}

a {
    color: black;
    border-bottom: 1px dotted black;
    text-decoration: none;
}

#main {
    padding: 0 12px;
}

.aligncenter {
    display: block;
    margin-right: auto;
    margin-left: auto;
}

footer .site-info {
    padding-top: 1.25em;
    text-align: center;
    font-size: 0.85em;
}

.sep {
    padding: 0 4px;
}

